--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 psycopg2 = "^2.9.9"
+types-psycopg2 = "^2.9.21.20240819"
+types-requests = "^2.32.0.20240712"
 
 
 [tool.poetry.group.lint.dependencies]
